# stream-book

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
config/: default.toml  local.toml
src/: main.rs
src/grpc_routes/: grpc_impl.rs  mod.rs
src/order_book/: model.rs
src/utils/: config.rs  telemetry.rs
src/web_routes/: mod.rs  web_impl.rs
src/ws_data_providers/: binance_ws_client.rs  bitstamp_client.rs  mod.rs  ws_async_client_factory.rs  ws_listeners.rs
